modules/backend/include/property_editor.less
/**
 * Property Editor Stylesheet
 * Caracal Backend
 *
 * Copyright © 2019. Way2CU. All Rights Reserved.
 * Author: Mladen Mijatov
 */

div.window div.property-editor,
div.dialog div.property-editor {
	border: 1px solid @color_input_border;
	border-radius: @input_radius;
	background-color: @color_input_background;

	.input-transition();

	&.focused {
		border-color: @color_input_active;
		color: @color_input_active;
	}

	&.disabled {
		border-color: lighten(@color_input_border, 50);
		color: lighten(@color_input_border, 50);
	}

	span.property {
		display: inline-block;
		vertical-align: top;
		padding: @input_padding;

		border-right: 1px dotted @color_input_border;
		background-color: darken(@color_bright, 5);

		.input-transition();

		html[dir=rtl] & {
			border: 0;
			border-left: 1px dotted @color_input_border;
		}

		// remove option
		a {
			display: inline-block;
			position: relative;
			top: -1px;
			vertical-align: middle;
			margin-left: @input_padding;
			width: 1rem;
			height: 1rem;

			border: 1px solid darken(@color_bright, 20);
			border-radius: 50%;
			background-color: white;
			overflow: hidden;

			html[dir=rtl] & {
				margin-left: 0;
				margin-right: @input_padding;
			}

			&:before {
				position: absolute;
				top: 50%;
				left: 50%;
				width: 2px;
				height: 0.7rem;
				content: '';

				background-color: @color_dull;

				transform: translate(-50%, -50%) rotate(-45deg);
			}

			&:after {
				position: absolute;
				top: 50%;
				left: 50%;
				width: 2px;
				height: 0.7rem;
				content: '';

				background-color: @color_dull;

				transform: translate(-50%, -50%) rotate(45deg);
			}
		}
	}

	input {
		border: 0;

		// hide original field
		&:last-of-type {
			display: none;
		}
	}
}

